load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

deps = [
    "//src/main/kotlin/nl/tulipsolutions/byteutils",
    "//third_party/jvm/junit",
    "//third_party/jvm/org/assertj:assertj_core",
    "//third_party/jvm/org/bouncycastle:bcprov_jdk15on",
]

kt_jvm_test(
    name = "test_base58",
    size = "small",
    srcs = glob(["Base58Test.kt"]),
    tags = ["exclusive"],
    test_class = "nl.tulipsolutions.byteutils.Base58Test",
    deps = deps,
)

kt_jvm_test(
    name = "test_bech32",
    size = "small",
    srcs = glob(["Bech32Test.kt"]),
    tags = ["exclusive"],
    test_class = "nl.tulipsolutions.byteutils.Bech32Test",
    deps = deps,
)
